--- a/maximiliano/basics-o1/index.html
+++ b/maximiliano/basics-o1/index.html
@@ -9,8 +9,8 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assetscss" />
-    <script src="assets/"></script>
+    <link rel="stylesheet" href="assets/styles/app.css" />
+    <script src="assets/scripts/app.js"></script>
   </head>
   <body>
     <header>
